testdata/envoy-resources/want-static.yaml
# Generated by esgw. DO NOT EDIT.
# config_version: 16c0fdaa7071
admin:
  address:
    pipe:
      path: /tmp/esgw-admin.sock
node:
  cluster: esgw
  id: esgw
  metadata:
    esgw.config_version: 16c0fdaa7071
static_resources:
  clusters:
    - connect_timeout: 3s
      load_assignment:
        cluster_name: legacy-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: legacy.internal
                      port_value: 9000
      name: legacy-cluster
      type: STRICT_DNS
    - connect_timeout: 5s
      load_assignment:
        cluster_name: us/app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9000
      name: us/app
      type: STATIC
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 60s
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: local_ratelimit
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                max_request_headers_kb: 60
                route_config:
                  name: rc/http
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: vh/api
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: us/app
                            timeout: 15s
                server_name: esgw
                stat_prefix: lis/http
                strip_any_host_port: true
      name: lis/http
