testdata/envoy-resources/want-xds.json
{
  "clusters": {
    "legacy-cluster": {
      "connect_timeout": "3s",
      "load_assignment": {
        "cluster_name": "legacy-cluster",
        "endpoints": [
          {
            "lb_endpoints": [
              {
                "endpoint": {
                  "address": {
                    "socket_address": {
                      "address": "legacy.internal",
                      "port_value": 9000
                    }
                  }
                }
              }
            ]
          }
        ]
      },
      "name": "legacy-cluster",
      "type": "STRICT_DNS"
    },
    "us/app": {
      "connect_timeout": "5s",
      "eds_cluster_config": {
        "eds_config": {
          "ads": {}
        }
      },
      "name": "us/app",
      "type": "EDS"
    }
  },
  "endpoints": {
    "us/app": {
      "cluster_name": "us/app",
      "endpoints": [
        {
          "lb_endpoints": [
            {
              "endpoint": {
                "address": {
                  "socket_address": {
                    "address": "127.0.0.1",
                    "port_value": 9000
                  }
                }
              }
            }
          ]
        }
      ]
    }
  },
  "listeners": {
    "lis/http": {
      "address": {
        "socket_address": {
          "address": "0.0.0.0",
          "port_value": 80
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.filters.network.http_connection_manager",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                "common_http_protocol_options": {
                  "idle_timeout": "60s"
                },
                "http_filters": [
                  {
                    "name": "envoy.filters.http.cors",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                    }
                  },
                  {
                    "name": "envoy.filters.http.jwt_authn",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                    }
                  },
                  {
                    "name": "envoy.filters.http.local_ratelimit",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                      "stat_prefix": "local_ratelimit"
                    }
                  },
                  {
                    "name": "envoy.filters.http.router",
                    "typed_config": {
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                    }
                  }
                ],
                "max_request_headers_kb": 60,
                "rds": {
                  "config_source": {
                    "ads": {}
                  },
                  "route_config_name": "rc/http"
                },
                "server_name": "esgw",
                "stat_prefix": "lis/http"
              }
            }
          ]
        }
      ],
      "name": "lis/http"
    }
  },
  "routes": {
    "rc/http": {
      "name": "rc/http",
      "virtual_hosts": [
        {
          "domains": [
            "*"
          ],
          "name": "vh/api",
          "routes": [
            {
              "match": {
                "prefix": "/"
              },
              "route": {
                "cluster": "us/app",
                "timeout": "15s"
              }
            }
          ]
        }
      ]
    }
  },
  "secrets": {},
  "version": "b7dc0962eb3a"
}
